first bug found

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
 addopts = --alluredir .local/allure-results
-          --clean-alluredir
+          --clean-alluredir /home/zack/exaile_testing/tests/CSCI926/xl/test_common.py
 console_output_style = count
 testpaths = tests/CSCI926
