--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,4 @@
 [pytest]
-addopts = --alluredir .local/allure-results
-          --clean-alluredir /home/zack/exaile_testing/tests/CSCI926/xl/test_common.py
+addopts = /home/zack/exaile_testing/tests/CSCI926
 console_output_style = count
 testpaths = tests/CSCI926
