--- a/.github/workflows/csci.yml
+++ b/.github/workflows/csci.yml
@@ -17,8 +17,8 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Add User
-        run: useradd -MN exaile
+      # - name: Add User
+      #   run: useradd -MN exaile
       - name: Install OS dependencies
         run: |
           RUN set -x \
