--- a/.github/workflows/csci.yml
+++ b/.github/workflows/csci.yml
@@ -19,25 +19,17 @@ jobs:
           python-version: ${{ matrix.python-version }}
       # - name: Add User
       #   run: useradd -MN exaile
-      - name: Install OS dependencies
-        run: |
-          set -x \
-          && apt-get update \
-          && apt-get install --assume-yes --no-install-recommends \
-            gettext \
-            gir1.2-gst-plugins-base-1.0 \
-            gir1.2-gstreamer-1.0 \
-            gstreamer1.0-plugins-base \
-            libgstreamer1.0-0 \
-            make \
-            python3 \
-            python3-bsddb3 \
-            python3-gi \
-            python3-mutagen \
-            python3-pytest \
-            python3-sphinx \
-            python3-sphinx-rtd-theme \
-          && find /var/lib/apt/lists -mindepth 1 -delete
+      # - name: Install OS dependencies
+      #   run: |
+      #     set -x \
+      #     && apt-get update \
+      #     && apt-get install --assume-yes --no-install-recommends \
+      #       gettext \
+      #       gir1.2-gst-plugins-base-1.0 \
+      #       gir1.2-gstreamer-1.0 \
+      #       gstreamer1.0-plugins-base \
+      #       libgstreamer1.0-0 \
+      #     && find /var/lib/apt/lists -mindepth 1 -delete
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
