--- a/.github/workflows/csci.yml
+++ b/.github/workflows/csci.yml
@@ -17,19 +17,19 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      # - name: Add User
-      #   run: useradd -MN exaile
-      # - name: Install OS dependencies
-      #   run: |
-      #     set -x \
-      #     && apt-get update \
-      #     && apt-get install --assume-yes --no-install-recommends \
-      #       gettext \
-      #       gir1.2-gst-plugins-base-1.0 \
-      #       gir1.2-gstreamer-1.0 \
-      #       gstreamer1.0-plugins-base \
-      #       libgstreamer1.0-0 \
-      #     && find /var/lib/apt/lists -mindepth 1 -delete
+      - name: Add User
+        run: sudo useradd -MN exaile
+      - name: Install OS dependencies
+        run: |
+          set -x \
+          && sudo apt-get update \
+          && sudo apt-get install --assume-yes --no-install-recommends \
+            gettext \
+            gir1.2-gst-plugins-base-1.0 \
+            gir1.2-gstreamer-1.0 \
+            gstreamer1.0-plugins-base \
+            libgstreamer1.0-0 \
+          && find /var/lib/apt/lists -mindepth 1 -delete
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
