--- a/.github/workflows/csci.yml
+++ b/.github/workflows/csci.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install OS dependencies
         uses: awalsh128/cache-apt-pkgs-action@latest
         with:
-          packages: gettext gir1.2-gst-plugins-base-1.0 gir1.2-gstreamer-1.0 gstreamer1.0-plugins-base libgstreamer1.0-0
+          packages: gettext gir1.2-gst-plugins-base-1.0 gir1.2-gstreamer-1.0 gstreamer1.0-plugins-base libgstreamer1.0-0 python3-bsddb3
           version: 1.0
       - name: Install dependencies
         run: |
