--- a/.github/workflows/csci.yml
+++ b/.github/workflows/csci.yml
@@ -35,5 +35,9 @@ jobs:
             gstreamer1.0-plugins-ugly
             gstreamer1.0-plugins-bad
           version: 1.2
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements_test.txt
       - name: Run Tests
         run: pytest -v
