--- a/.github/workflows/csci.yml
+++ b/.github/workflows/csci.yml
@@ -17,6 +17,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+      - run: python3 -V
       - name: Add User
         run: sudo useradd -MN exaile
       - name: Install OS dependencies
@@ -34,7 +35,7 @@ jobs:
             gstreamer1.0-plugins-good
             gstreamer1.0-plugins-ugly
             gstreamer1.0-plugins-bad
-          version: 1.3
+          version: 1.4
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
