--- a/.github/workflows/csci.yml
+++ b/.github/workflows/csci.yml
@@ -27,6 +27,7 @@ jobs:
           gir1.2-gtk-3.0 \
           gir1.2-gstreamer-1.0 \
           gir1.2-gst-plugins-base-1.0 \
+          libcairo2-dev \
           gstreamer1.0-plugins-base \
           gstreamer1.0-plugins-good \
           gstreamer1.0-plugins-ugly \
