--- a/.github/workflows/csci.yml
+++ b/.github/workflows/csci.yml
@@ -28,6 +28,7 @@ jobs:
           gir1.2-gstreamer-1.0 \
           gir1.2-gst-plugins-base-1.0 \
           libcairo2-dev \
+          libgirepository1.0-dev \
           gstreamer1.0-plugins-base \
           gstreamer1.0-plugins-good \
           gstreamer1.0-plugins-ugly \
