--- a/.github/workflows/csci.yml
+++ b/.github/workflows/csci.yml
@@ -43,4 +43,4 @@ jobs:
           pip install -r requirements_test.txt
           
       - name: Run Tests
-        run: EXAILE_DIR=$(pwd) pytest
+        run: EXAILE_DIR=$(pwd); pytest
