--- a/.github/workflows/csci.yml
+++ b/.github/workflows/csci.yml
@@ -42,4 +42,4 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements_test.txt
       - name: Run Tests
-        run: PATH=${PATH}:$(pwd) pytest
+        run: export EXAILE_DIR=$(pwd); pytest
