--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-addopts = /home/zack/exaile_testing/tests/CSCI926
+addopts = tests/CSCI926
 console_output_style = count
 testpaths = tests/CSCI926
