--- a/.github/workflows/csci.yml
+++ b/.github/workflows/csci.yml
@@ -17,26 +17,15 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+          cache: 'pip'
       - run: python3 -V
       - name: Add User
         run: sudo useradd -MN exaile
       - name: Install OS dependencies
-        run: |
-          sudo apt update && \
-          sudo apt install \
-          gir1.2-gtk-3.0 \
-          gir1.2-gstreamer-1.0 \
-          gir1.2-gst-plugins-base-1.0 \
-          libcairo2-dev \
-          libgirepository1.0-dev \
-          gstreamer1.0-plugins-base \
-          gstreamer1.0-plugins-good \
-          gstreamer1.0-plugins-ugly \
-          gstreamer1.0-plugins-bad \
-          python3-mutagen \
-          python3-gi \
-          python3-gi-cairo \
-          python3-dbus
+        uses: awalsh128/cache-apt-pkgs-action@latest
+        with:
+          packages: gir1.2-gtk-3.0 gir1.2-gstreamer-1.0 gir1.2-gst-plugins-base-1.0 libcairo2-dev libgirepository1.0-dev gstreamer1.0-plugins-base gstreamer1.0-plugins-good gstreamer1.0-plugins-ugly gstreamer1.0-plugins-bad python3-mutagen python3-gi python3-gi-cairo python3-dbus
+          version: 2.0
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
