--- a/.github/workflows/csci.yml
+++ b/.github/workflows/csci.yml
@@ -29,9 +29,10 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements_test.txt
+          pip install PyGObject pytest 
       - name: Make Files
         run: |
+          py.test-3 -V
           make test
       - name: Run Tests
         run: export EXAILE_DIR=$(pwd) && export PATH="${PATH}:$(pwd)"; python -m pytest tests/CSCI926
