--- a/.github/workflows/csci.yml
+++ b/.github/workflows/csci.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install PyGObject pytest 
+          export PYTEST=pytest
       - name: Make Files
         run: |
           py.test-3 -V
