--- a/.github/workflows/csci.yml
+++ b/.github/workflows/csci.yml
@@ -24,17 +24,37 @@ jobs:
       - name: Install OS dependencies
         uses: awalsh128/cache-apt-pkgs-action@latest
         with:
-          packages: gir1.2-gtk-3.0 gir1.2-gstreamer-1.0 gir1.2-gst-plugins-base-1.0 libcairo2-dev libgirepository1.0-dev gstreamer1.0-plugins-base gstreamer1.0-plugins-good gstreamer1.0-plugins-ugly gstreamer1.0-plugins-bad python3-bsddb3 python3-mutagen python3-gi python3-gi-cairo python3-dbus make
-          version: 2.2
+          packages: |
+            gettext
+            gir1.2-gst-plugins-base-1.0
+            gir1.2-gstreamer-1.0
+            gir1.2-gtk-3.0
+            gstreamer1.0-plugins-bad
+            gstreamer1.0-plugins-base
+            gstreamer1.0-plugins-good
+            gstreamer1.0-plugins-ugly
+            libcairo2-dev
+            libgirepository1.0-dev
+            libgstreamer1.0-0
+            make
+            python3-bsddb3
+            python3-dbus
+            python3-gi
+            python3-gi-cairo
+            python3-mutagen
+            python3-pytest
+            python3-sphinx
+            python3-sphinx-rtd-theme
+          version: 3.0
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install PyGObject pytest 
+          pip install PyGObject bsddb3
       - name: Make Files
         run: |
           export PYTEST=pytest
           ${PYTEST} -V
-          pip list | grep bsddb3
+          python3 -m pip list
           make test
       - name: Run Tests
-        run: export EXAILE_DIR=$(pwd) && export PATH="${PATH}:$(pwd)"; python -m pytest tests/CSCI926
+        run: export EXAILE_DIR=$(pwd) && export PATH="${PATH}:$(pwd)"; python3 -m pytest tests/CSCI926
