--- a/.github/workflows/csci.yml
+++ b/.github/workflows/csci.yml
@@ -26,6 +26,7 @@ jobs:
         with:
           packages: |
             gettext
+            libdb-dev
             gir1.2-gst-plugins-base-1.0
             gir1.2-gstreamer-1.0
             gir1.2-gtk-3.0
