--- a/.github/workflows/csci.yml
+++ b/.github/workflows/csci.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install PyGObject bsddb3 pytest
+          pip install PyGObject bsddb3 pytest mutagen
       - name: Run Tests
         run: |
           python -V
